added missing gulp-streamify

--- a/package.json
+++ b/package.json
@@ -31,39 +31,40 @@
   },
   "devDependencies": {
     "browser-sync": "~1.3.5",
-    "browserify-shim": "~3.7.0",
     "browserify": "~5.10.0",
-    "coffeeify": "~0.7.0",
-    "watchify": "https://github.com/cconger/watchify/tarball/35407c030db9c6c9099e7fc2a5c21ac5eb7db5f8",
-    "connect": "~3.1.1",
-    "jstify": "~0.4.2",
-    "haml-coffee-browserify": "~0.0.3",
-    "vinyl-source-stream": "~0.1.1",
-    "pretty-hrtime": "~0.2.1",
-    "exorcist": "~0.1.6",
-    "vinyl-transform": "0.0.1",
+    "browserify-shim": "~3.7.0",
     "coffee-script": "~1.7.1",
+    "coffeeify": "~0.7.0",
+    "connect": "~3.1.1",
     "envify": "~3.0.0",
-    "underscore": "~1.6.0",
+    "exorcist": "~0.1.6",
+    "gulp": "~3.8.7",
     "gulp-changed": "~1.0.0",
+    "gulp-clean": "~0.3.1",
+    "gulp-compass": "~1.3.1",
+    "gulp-concat": "~2.3.4",
+    "gulp-file-include": "~0.4.2",
+    "gulp-haml-coffee": "~0.0.6",
+    "gulp-if": "~1.2.4",
     "gulp-imagemin": "~1.0.1",
+    "gulp-jasmine": "~1.0.0",
+    "gulp-livereload": "~2.1.1",
+    "gulp-minify-css": "~0.3.7",
     "gulp-notify": "~1.5.0",
     "gulp-open": "~0.2.8",
-    "gulp-compass": "~1.3.1",
-    "gulp-haml-coffee": "~0.0.6",
-    "gulp-livereload": "~2.1.1",
     "gulp-plumber": "~0.6.5",
-    "gulp-concat": "~2.3.4",
+    "gulp-rev-all": "~0.6.2",
+    "gulp-streamify": "0.0.5",
     "gulp-uglify": "~0.3.2",
     "gulp-util": "~3.0.0",
-    "gulp-minify-css": "~0.3.7",
-    "gulp-if": "~1.2.4",
-    "gulp-rev-all": "~0.6.2",
-    "gulp-clean": "~0.3.1",
-    "gulp-jasmine": "~1.0.0",
-    "gulp": "~3.8.7",
+    "haml-coffee-browserify": "~0.0.3",
+    "jstify": "~0.4.2",
     "mime-types": "~1.0.2",
-    "gulp-file-include": "~0.4.2"
+    "pretty-hrtime": "~0.2.1",
+    "underscore": "~1.6.0",
+    "vinyl-source-stream": "~0.1.1",
+    "vinyl-transform": "0.0.1",
+    "watchify": "https://github.com/cconger/watchify/tarball/35407c030db9c6c9099e7fc2a5c21ac5eb7db5f8"
   },
   "dependencies": {
     "backbone": "~1.1.2",
