--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "dependencies": {
     "backbone": "~1.1.2",
-    "jquery": "~2.1.1",
-    "backbone.marionette": "~1.6.3"
+    "backbone.marionette": "~1.6.3",
+    "jquery": "~2.1.1"
   }
 }
